<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_toggle_view"
        android:icon="@drawable/ic_folder"
        android:title="@string/action_folders"
        app:showAsAction="always" />

    <group
        android:id="@+id/group_sort"
        android:checkableBehavior="single">
        <item android:id="@+id/sort_date" android:title="@string/sort_date" />
        <item android:id="@+id/sort_size" android:title="@string/sort_size" />
        <item android:id="@+id/sort_duration" android:title="@string/sort_duration" />
        <item android:id="@+id/sort_name" android:title="@string/sort_name" />
    </group>

    <group
        android:id="@+id/group_order"
        android:checkableBehavior="single">
        <item android:id="@+id/order_asc" android:title="@string/order_asc" />
        <item android:id="@+id/order_desc" android:title="@string/order_desc" />
    </group>
</menu>
