<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:minHeight="56dp"
    android:orientation="horizontal"
    android:paddingStart="4dp"
    android:paddingTop="4dp"
    android:paddingEnd="0dp"
    android:paddingBottom="4dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/opt_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="?attr/textAppearanceLabelLarge" />

        <TextView
            android:id="@+id/opt_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="middle"
            android:singleLine="true"
            android:textAppearance="?attr/textAppearanceBodySmall"
            android:textColor="?attr/colorOnSurfaceVariant" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_copy"
        style="@style/OptionIconButton"
        android:contentDescription="@string/cd_salin"
        android:src="@drawable/ic_content_copy" />

    <ImageButton
        android:id="@+id/btn_download"
        style="@style/OptionIconButton"
        android:contentDescription="@string/cd_unduh"
        android:src="@drawable/ic_download" />

    <ImageButton
        android:id="@+id/btn_stream"
        style="@style/OptionIconButton"
        android:contentDescription="@string/cd_stream" />

    <ImageButton
        android:id="@+id/btn_builtin"
        style="@style/OptionIconButton"
        android:contentDescription="@string/cd_bawaan"
        android:src="@drawable/ic_play_circle" />
</LinearLayout>
